--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://admin:root@cluster0.kylzvrb.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=testdb
