--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.data.mongodb.uri=mongodb+srv://admin:root@cluster0.kylzvrb.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=testdb
+
+
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=admin
+#spring.data.mongodb.password=password
+#spring.data.mongodb.database=demo
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
